# goldsrc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
src/: bsp.rs  common.rs  error.rs  lib.rs  mdl.rs  texture.rs  util.rs  wad.rs
src/byteorder/: bsp.rs  map.rs  mod.rs  texture.rs  wad.rs
src/bytes/: mod.rs  texture.rs  wad.rs
src/nom/: bsp.rs  map.rs  mod.rs  texture.rs  wad.rs
src/parser/: bsp.rs  map.rs  mod.rs  texture.rs  wad.rs
src/parser/byteorder/: map.rs  texture.rs
src/parser/nom/: bsp.rs  map.rs  mod.rs  texture.rs  wad.rs
src/repr/: bsp.rs  map.rs  mod.rs  texture.rs  wad.rs
tests/: bsp.rs  common.rs  mdl.rs  spr.rs  wad.rs
