[package]
name = "goldsrc-rs"
version = "1.0.2"
authors = ["r4v3n6101 <raven6107@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Collection of file's parsers for goldsrc engine."
documentation = "https://docs.rs/goldsrc-rs"
repository = "https://github.com/r4v3n6101/goldsrc-rs/"
keywords = ["goldsrc", "gamedev", "parsing"]
categories = ["parsing", "rendering::data-formats", "game-development"]

[dependencies]
smallstr = "0.3"
byteorder = "1.5"

[dev-dependencies]
static_assertions = "1"
glob = "0.3"
image = "0.25"
