[package]
name = "goldsrc-rs"
version = "2.0.0"
authors = ["r4v3n6101 <raven6107@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Collection of file's parsers for goldsrc engine."
documentation = "https://docs.rs/goldsrc-rs"
repository = "https://github.com/r4v3n6101/goldsrc-rs/"
keywords = ["goldsrc", "gamedev", "parsing"]
categories = ["parsing", "rendering::data-formats", "game-development"]

[dependencies]
zerocopy = "0.8.40"
zerocopy-derive = "0.8.40"
static_assertions = "1"
thiserror = "2.0.18"

[dev-dependencies]
glob = "0.3"
image = "0.25"
